# summarize-cli

./: .gitignore  README.md  pyproject.toml
src/summarize_cli/: __init__.py  cli.py  pdftext.py  summarize.py
tests/: conftest.py  test_main.py  test_main_async.py
